correçãoi das imagens

--- a/index.html
+++ b/index.html
@@ -56,12 +56,7 @@
              <div class="banner-inner">
                     <div class="container">
                         <div class="row">
-                            <div class="col-sm-6">
-                                 
-                                    <h2>Colégio TCA</h2>
-                                    <p>Um colégio completo! <br>
-                                        Do berçario ao ensino médio.
-                                    </p>                                
+                            <div class="col-sm-6">                              
                             </div>
                         </div>
                     </div>
@@ -76,8 +71,6 @@
           <div class="row">
             <div class="col-md-6 wp1 animated fadeInUp"> 
               <p>No Colégio T.C.A, oferecemos uma jornada educativa completa desde o berçário até o ensino médio, com espaços pensados para inspirar e motivar os alunos em cada fase do desenvolvimento. Valorizamos nosso time de funcionários, que trabalha com compromisso para tornar a escola especial, mantendo um ambiente de trabalho transparente e motivador. Nossa proposta pedagógica é baseada nos quatro pilares da educação para o século XXI: aprender a conhecer, fazer, conviver e ser. Buscamos o desenvolvimento integral do aluno, criando condições para que cada um possa agir de forma segura e responsável em uma sociedade diversa e em constante transformação. Estamos comprometidos em oferecer uma experiência educacional excepcional, preparando os alunos não apenas para os desafios acadêmicos, mas também para a vida.</p>
-
-              <a href="#" class="download-btn">alguma coisa?</a>
             </div>
 			<div class="col-md-6">
 				  <div class="row">
@@ -245,8 +238,7 @@
    <section id="team">
 <div class="container">
 <div class="section-header">
-                <h2 class="section-title wow fadeInDown">Saindo da rotina</h2>
-                <p class="wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget risus vitae massa <br> semper aliquam quis mattis quam.</p>
+                <h2 class="section-title1 wow fadeInDown">Saindo da rotina</h2>
             </div>			
 <div class="row" data-anim-type="fade-in-up">
 
@@ -268,7 +260,7 @@
     <a href="https://www.instagram.com/p/C3iLj2TAxde/" target="_blank"> <i class="fa fa-instagram"></i></a>
     </div>
     <div class="description">
-    <h3> Trilha</h3>
+    <h3> Carnaval</h3>
     <p>
     </p>
     </div>
