--- a/index.html
+++ b/index.html
@@ -53,14 +53,19 @@
     </header><!--/header-->
 
     <section id="hero-banner">
-             <div class="banner-inner">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-6">                              
-                            </div>
-                        </div>
+        <div class="banner-inner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <a href="https://wa.me/5511962761827/?text=Olá,%20gostaria%20de%20mais%20informações%20sobre%20o%20colégio." target="_blank" class="btn-whatsapp">Matricule-se já</a>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    
+
+
     </section><!--/#main-slider-->
 <section class="download-now" id="products">
         <div class="container">
@@ -129,13 +134,6 @@
                 <p class="wow fadeInDown">Conheça alguns de nossos ambientes</p>
             </div>
 
-            <div class="text-center">
-                <ul class="portfolio-filter">
-                    <li><a class="active" href="#" data-filter="*">Todos</a></li>
-                    <li><a href="#" data-filter=".designing">Berçario</a></li>
-                    <li><a href="#" data-filter=".mobile">Mobile App</a></li>
-                </ul><!--/#portfolio-filter-->
-            </div>
 
             <div class="portfolio-items">
                 <div class="portfolio-item designing">
@@ -145,7 +143,6 @@
                             <h3>Berçario</h3>
                             <a class="preview" href="images/portfolio/01.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
                         </div>
-						<h4>Berçario</h4>
                     </div>
                 </div><!--/.portfolio-item-->
 
@@ -153,10 +150,9 @@
                     <div class="portfolio-item-inner">
                         <img class="img-responsive" src="images/portfolio/02.jpg" alt="" width="850px">
                         <div class="portfolio-info">
-                            <h3>Quadra</h3>
+                            <h3>Quadra Poliesportiva</h3>
                             <a class="preview" href="images/portfolio/02.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
                         </div>
-						<h4>Quadra</h4>
                     </div>
                 </div><!--/.portfolio-item-->
 
@@ -164,11 +160,9 @@
                     <div class="portfolio-item-inner">
                         <img class="img-responsive" src="images/portfolio/03.jpg" alt="" width="850px">
                         <div class="portfolio-info">
-                            <h3>Project Name</h3>
-                             Some description..
+                            <h3>Anfiteatro</h3>
                             <a class="preview" href="images/portfolio/03.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
                         </div>
-						<h4>Lorem Ipsum</h4>
                     </div>
                 </div><!--/.portfolio-item-->
 
@@ -176,11 +170,9 @@
                     <div class="portfolio-item-inner">
                         <img class="img-responsive" src="images/portfolio/04.jpg" alt="" width="850px">
                         <div class="portfolio-info">
-                            <h3>Project Name</h3>
-                            Some description..
+                            <h3>Laboratório de Ciências</h3>
                             <a class="preview" href="images/portfolio/04.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
                         </div>
-						<h4>Lorem Ipsum</h4>
                     </div>
                 </div><!--/.portfolio-item-->
 
@@ -188,11 +180,9 @@
                     <div class="portfolio-item-inner">
                         <img class="img-responsive" src="images/portfolio/05.jpg" alt="" width="850px">
                         <div class="portfolio-info">
-                            <h3>Project Name</h3>
-                             Some description..
+                            <h3>Sanitário</h3>
                             <a class="preview" href="images/portfolio/05.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
                         </div>
-						<h4>Lorem Ipsum</h4>
                     </div>
                 </div><!--/.portfolio-item-->
 
@@ -200,11 +190,9 @@
                     <div class="portfolio-item-inner">
                         <img class="img-responsive" src="images/portfolio/06.jpg" alt="" width="850px">
                         <div class="portfolio-info">
-                            <h3>Project Name</h3>
-                             Some description..
+                            <h3>Salas</h3>
                             <a class="preview" href="images/portfolio/06.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
                         </div>
-						<h4>Lorem Ipsum</h4>
                     </div>
                 </div><!--/.portfolio-item-->
 
@@ -212,11 +200,9 @@
                     <div class="portfolio-item-inner">
                         <img class="img-responsive" src="images/portfolio/07.jpg" alt="" width="850px">
                         <div class="portfolio-info">
-                            <h3>Project Name</h3>
-                             Some description..
+                            <h3>Sala Maker</h3>
                             <a class="preview" href="images/portfolio/07.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
                         </div>
-						<h4>Lorem Ipsum</h4>
                     </div>
                 </div><!--/.portfolio-item-->
 
@@ -224,11 +210,9 @@
                     <div class="portfolio-item-inner">
                         <img class="img-responsive" src="images/portfolio/08.jpg" alt="" width="850px">
                         <div class="portfolio-info">
-                            <h3>Project Name</h3>
-                             Some description..
+                            <h3>Quadra Infantil</h3>
                             <a class="preview" href="images/portfolio/08.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
                         </div>
-						<h4>Lorem Ipsum</h4>
                     </div>
                 </div><!--/.portfolio-item-->
             </div>
@@ -245,10 +229,10 @@
 <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
 <div class="team-wrapper">
 <div class="team-inner" style="background-image: url('images/team/01.PNG')">
-<a href="https://www.instagram.com/p/C5i6_wfAcxZ/" target="_blank"> <i class="fa fa-instagram"></i></a>
+<a href="https://www.instagram.com/colegiotca/reel/C0SUIDJPuxu/" target="_blank"> <i class="fa fa-instagram"></i></a>
 </div>
 <div class="description">
-<h3>Robótica</h3>
+<h3>Feira de Ciências</h3>
 <p>
 </p>
 </div>
@@ -256,28 +240,17 @@
 </div>
 <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
     <div class="team-wrapper">
-    <div class="team-inner" style="background-image: url('images/team/04.PNG')">
-    <a href="https://www.instagram.com/p/C3iLj2TAxde/" target="_blank"> <i class="fa fa-instagram"></i></a>
+    <div class="team-inner" style="background-image: url('images/team/02.PNG')">
+    <a href="https://www.instagram.com/p/C5i6_wfAcxZ/" target="_blank"> <i class="fa fa-instagram"></i></a>
     </div>
     <div class="description">
-    <h3> Carnaval</h3>
+    <h3>Robótica</h3>
     <p>
     </p>
     </div>
     </div>
     </div>
-<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-<div class="team-wrapper">
-<div class="team-inner" style="background-image: url('images/team/02.PNG')">
-<a href="https://www.instagram.com/p/C5RIc9kgOwZ/" target="_blank"> <i class="fa fa-instagram"></i></a>
-</div>
-<div class="description">
-<h3> Stand up</h3>
-<p>
-</p>
-</div>
-</div>
-</div>
+
 <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
 <div class="team-wrapper">
 <div class="team-inner" style="background-image: url('images/team/03.PNG')">
@@ -285,6 +258,18 @@
 </div>
 <div class="description">
 <h3> Argila</h3>
+<p>
+</p>
+</div>
+</div>
+</div>
+<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+<div class="team-wrapper">
+<div class="team-inner" style="background-image: url('images/team/04.PNG')">
+<a href="https://www.instagram.com/p/C5RIc9kgOwZ/" target="_blank"> <i class="fa fa-instagram"></i></a>
+</div>
+<div class="description">
+<h3> Stand up</h3>
 <p>
 </p>
 </div>
@@ -341,8 +326,8 @@
                 </div>
                 <div class="col-sm-6">
                     <ul class="social-icons">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/colegiotcaoficial"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com/colegiotca/"><i class="fa fa-instagram"></i></a></li>
                     </ul>
                 </div>
             </div>
