--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <a href="https://wa.me/5511962761827/?text=Olá,%20gostaria%20de%20mais%20informações%20sobre%20o%20colégio." target="_blank" class="btn-whatsapp">Matricule-se já</a>
+                        <a href="https://wa.me/5511962761827/?text=Olá,%20gostaria%20de%20mais%20informações%20sobre%20o%20colégio." target="_blank" class="btn-whatsapp">MATRICULE-SE JÁ</a>
                     </div>
                 </div>
             </div>
