cologando explicação do logo

--- a/index.html
+++ b/index.html
@@ -126,6 +126,14 @@
           </div>
         </div>
       </section>
+
+
+      <section id="hero-bannerLogo">
+        <div class="banner-inneLogo">
+        </div>
+    </section>
+
+
    
     <section id="portfolio">
         <div class="container">
